--- a/restaurant/src/main/res/layout/fragment_registration.xml
+++ b/restaurant/src/main/res/layout/fragment_registration.xml
@@ -24,7 +24,7 @@
         android:hint="@string/hint_reg_second_name"
         android:inputType="text" />
 
-    <EditText
+    <ru.papino.uikit.components.inputs.MaskedEditText
         android:id="@+id/editPhone"
         style="@style/PaPino.EditText.Registration"
         android:layout_width="match_parent"
